# mega-code

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  Makefile  README.md  bitbucket-pipelines.yml  copy.bara.sky  gemini-extension.json  pyproject.toml  setup.cfg
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: mega-review.md
codex-skills/mega-code-help/: SKILL.md
codex-skills/mega-code-login/: SKILL.md
codex-skills/mega-code-profile/: SKILL.md
codex-skills/mega-code-run/: SKILL.md
codex-skills/mega-code-status/: SKILL.md
docs/design-docs/: skill-enhance-prd.md  wisdom-curation-prd.md  wisdom-gen-add-user-email.md  wisdom-gen-to-skill-enhance-flow.md  wisdom-gen-to-skill-enhance-impl.md
docs/issue/: skill-eval-timeout-issue.md
hooks/: hooks.json
mega_code/: __init__.py
mega_code/client/: __init__.py  check_auth.py  check_pending.py  cli.py  collector.py  config.yaml  curation_store.py  dirs.py  enhancement_viewer.py  ensure_user_email.py  eval_workspace.py  feedback.py  feedback_cli.py  host_llm.py  login.py  models.py  pending.py  prebuilt_upload.py  profile.py  pyproject.toml  run_pipeline.py  schema.py  skill_enhance_aggregator.py  skill_enhance_helper.py  skill_enhance_models.py  skill_enhance_runner.py  skill_installer.py  skill_security_audit.py  skill_utils.py  stats.py  turns.py  update.py
mega_code/client/api/: __init__.py  claude_sync.py  codex_sync.py  protocol.py  remote.py  sync.py
mega_code/client/filters/: __init__.py  cleaning.py  paths.py  secrets.py
mega_code/client/history/: __init__.py  convert.py  loader.py  models.py  protocol.py
mega_code/client/history/sources/: __init__.py  claude_native.py  codex.py  cursor.py  gemini.py  mega_code.py  opencode.py  parquet.py
mega_code/client/remote_enhance/: __init__.py  __main__.py  client.py  installer.py  packager.py  poller.py
mega_code/client/utils/: __init__.py  env.py  io.py  ndjson_tracing.py  path_utils.py  tracing.py
plugin/: README.md  pyproject.toml
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
plugin/mega_code/: __init__.py
plugin/mega_code/client/: cli.py  collector.py  compaction.py  feedback.py  login.py  models.py  pending.py  pyproject.toml  schema.py  skill_utils.py  stats.py  statusline.py
plugin/mega_code/client/api/: protocol.py  remote.py  sync.py
plugin/mega_code/client/filters/: base.py
plugin/mega_code/client/history/: __init__.py  models.py  protocol.py
plugin/mega_code/client/history/sources/: cursor.py  parquet.py
plugin/mega_code/client/utils/: tracing.py
plugin/scripts/: check_pending_skills.py  run_pipeline_async.py  session-start.sh
plugin/skills/feedback/: SKILL.md
plugin/skills/help/: SKILL.md
plugin/skills/login/: SKILL.md
plugin/skills/manage/: SKILL.md
plugin/skills/profile/: SKILL.md
plugin/skills/run/: SKILL.md
plugin/skills/status/: SKILL.md
scripts/: check_pending_skills.py  codex-bootstrap.sh  export_openapi.py  publish-oss.py  run_pipeline_async.py  session-start.sh
skills/feedback/: SKILL.md
skills/help/: SKILL.md
skills/login/: SKILL.md
skills/profile/: SKILL.md
skills/run/: SKILL.md
skills/skill-enhance/: SKILL.md
skills/skill-enhance-hitl/: SKILL.md
skills/skill-enhance-hitl/references/: grading-schema.md  security-checklist.md  test-case-schema.md  trust-policy.md
skills/skill-enhance-hitl/scripts/: launch-viewer.sh  stop-viewer.sh
skills/skill-enhance/references/: architecture.md  enhancement-principles.md  trust-policy.md
skills/skill-enhance/scripts/: launch-viewer.sh  setup.sh  stop-viewer.sh
skills/status/: SKILL.md
skills/stop/: SKILL.md
skills/trace/: SKILL.md
skills/update/: SKILL.md
skills/wisdom-curate/: SKILL.md
skills/wisdom-curate/references/: architecture.md  task-context-examples.md
skills/wisdom-curate/scripts/: install_skills.py  save_curation.py  setup.sh  update_curation_status.py
skills/wisdom-gen/: SKILL.md
skills/wisdom-gen/references/: email-gate.md  enhance-handoff.md
tests/: conftest.py  test_ndjson_tracing.py  test_pipeline_constraints.py  test_shared_env.py  test_spec_sync.py  test_turns.py
tests/api/: test_codex_sync.py
tests/client/: test_cleaning.py  test_enhancement_viewer.py  test_ensure_user_email.py  test_eval_workspace.py  test_native_sync.py  test_prebuilt_upload.py  test_remote_enhance_client.py  test_remote_enhance_installer.py  test_remote_enhance_main.py  test_remote_enhance_packager.py  test_remote_enhance_poller.py  test_skill_enhance_aggregator.py  test_skill_enhance_helper.py  test_skill_enhance_models.py  test_skill_enhance_runner.py  test_skill_security_audit.py  test_skill_utils.py
tests/docs/: test_documentation.py
tests/fixtures/: content_hash_vectors.json
tests/fixtures/cleaning_sessions/712c1829-ab61-49cd-ab44-04642d197dd5/: turns-original.jsonl  turns-removed.jsonl
tests/fixtures/cleaning_sessions/7e08e019-396b-4deb-9e1e-efbb969725e5/: turns-original.jsonl  turns-removed.jsonl
tests/fixtures/cleaning_sessions/c3c58130-8a09-4e5b-8a44-0955fe459b6c/: turns-original.jsonl  turns-removed.jsonl
tests/fixtures/codex/: generate_fixtures.py  golden_session.jsonl  missing_token_counts.jsonl  multi_project.jsonl  no_call_id.jsonl  no_payload_in_session_meta.jsonl  no_payload_in_turn_context.jsonl  no_session_meta.jsonl  no_timestamps.jsonl  orphaned_tool_output.jsonl  tool_call_no_output.jsonl  truncated_last_line.jsonl
tests/history/: test_codex_loader.py  test_codex_parser.py
tests/integration/: test_codex_integration.py
tests/skills/: test_codex_skills.py  test_compute_hash.py  test_skill_enhance_layout.py
